[TAP] is T. Alexander Popiel, a former PennMUSH developer (aka Talek)
[3] refers to code by (or inspired by) TinyMUSH 3.0
[MUX] refers to code by (or inspired by) TinyMUX 2.x
[Rhost] refers to code by (or inspired by) RhostMUSH

==========================================================================

Version 1.8.3 patchlevel 11                     ??? ??, 2009

Configuration:
  * The *_file options (connect_file, motd_file, etc) can now be a
    #dbref/attribute instead of a filename, in which case the given
    attribute is evaluated and the result shown in place of the text file.
    Based on patches by Nathan Baum and Mercutio@M*U*S*H. [MG]

Commands:
  * @decompile now takes multiple attribute patterns after the /
    (@dec obj/attr attr2) [GM]
  * @channel/decompile now shows the dbref of the channel mogrifier,
    instead of its name. [SW]
  * @pemit now takes a /port switch, which sends the message to the
    specified port. Suggested by Mercutio. [MG]

Functions:
  * testlock(<boolexp>, <victim>) tests a lock without setting it.
    Suggested by Mercutio@M*U*S*H. [GM]
  * lnum() now takes a fourth argument: A step. [GM]
  * cwho() now takes an optional second argument, to control whether
    online, offline or all players are returned. Suggested by Mercutio,
    based on a patch by Ifrit. [MG]
  * room(<room>) now returns <room>, instead of #-1. Also, room(<exit>)
    returns the exit's source room, rather than the destination. Suggested
    by Null@M*U*S*H. [MG]
  * Fixed a bug in how align() strips spaces when wrapping text. Reported
    by Paige@M*U*S*H. [MG]
  * pemit(<port number>, <message>) sends <message> to the specified
    port, like @pemit/port. Suggested by Mercutio. [MG]
  * lports() and lwho() take an optional second argument to include
    connections at the login screen. Suggested by Mercutio. [MG]

Fixes:
 * lsearch() with invalid syntax was failing to report it as such, causing