@@ -115,7 +115,9 @@ int most_conn_time(dbref player);
 int most_conn_time_priv(dbref player);
 char *least_idle_ip(dbref player);
 char *least_idle_hostname(dbref player);
-
+void do_who_mortal(dbref player, char *name);
+void do_who_admin(dbref player, char *name);
+void do_session(dbref player, char *name);
 /* sql.c */
 void sql_shutdown(void);
 
